[package]
name = "kvs"
version = "0.1.0"
authors = ["terakoya76 <terako.studio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = {version = "2", features = ["yaml"]}

# app
walkdir = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# error
thiserror = "1.0"
anyhow = "1.0"

# util
if_chain = "1.0"

# test
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.0"
