[package]
name = "kvs"
version = "0.1.0"
authors = ["terakoya76 <terako.studio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cli
clap = "3.0.0-beta.2"

# app
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.7"
derive_more = "0.99"
sled = "0.34"

# error
thiserror = "1.0"
anyhow = "1.0"

# util
if_chain = "1.0"

[dev-dependencies]
# test
assert_cmd = "1.0"
criterion = "0.2"
predicates = "1.0"
rand = "0.6"
tempfile = "3.0"
walkdir = "2.2"

[[bench]]
name = "engine_bench"
harness = false
